--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
+      <li><a href="./recipes/macncheese.html">Mac n Cheese Recipe</a></li>
+      <li><a href="./recipes/aglioeolio.html">Aglio e Olio</a></li>
       
-      <a href="./recipes/macncheese.html">Mac n Cheese Recipe</a>
     </ul>
 </body>
 </html>
