Add frech toast page

--- a/recipes/frenchtoast.html
+++ b/recipes/frenchtoast.html
@@ -3,32 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aglio e Olio</title>
+    <title>French Toast</title>
 </head>
 
 <body>
-    <h1>Aglio e Olio</h1>
-    <img src>
-    <h3></h3>
+    <h1>French Toast</h1>
+    <img src="https://www.allrecipes.com/thmb/UitQD816m6TCxQb4QHdg8cmebzY=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7016-french-toast-i-DDMFS-4x3-26c468d9cb284c2c83432bf2d33d49f8.jpg">
+    <h3>This fabulous French toast recipe works with many types of bread — white, whole wheat, brioche, cinnamon-raisin, Italian, or French! Delicious served hot with butter and maple syrup.</h3>
     <h2>Ingredients</h2>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>⅔ cup milk</li>
+      <li>2 large eggs</li>
+      <li>1 teaspoon vanilla extract (Optional)</li>
+      <li>¼ teaspoon ground cinnamon (Optional)</li>
+      <li>salt to taste</li>
+      <li>6 thick slices bread</li>
+      <li>1 tablespoon unsalted butter, or more as needed</li>
+     
 
     </ul>
     <h2>Steps</h2>
     <ol>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Whisk milk, eggs, vanilla, cinnamon, and salt together in a shallow bowl.</li>
+      <li>Lightly butter a griddle or skillet and heat over medium-high heat.</li>
+      <li>Dunk bread in the egg mixture, soaking both sides.</li>
+      <li>Transfer to the hot skillet and cook until golden, 3 to 4 minutes per side.</li>
+      <li>Serve hot.</li>
     </ol>
 
 
