--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="./recipes/macncheese.html">Mac n Cheese Recipe</a></li>
-      <li><a href="./recipes/aglioeolio.html">Aglio e Olio</a></li>
-      
+      <li><a href="./recipes/aglioeolio.html">Aglio e Olio Recipe</a></li>
+      <li><a href="./recipes/frenchtoast.html">French Toast Recipe</a></li>
     </ul>
 </body>
 </html>
